# foresight-api-challenge-box-truck-optimization

./: .gitignore  Makefile  README.md  system_design.txt
backend/: main.py  pyproject.toml
backend/app/: __init__.py
backend/app/agents/: __init__.py
backend/app/agents/extreme_point/: __init__.py  agent.py  anchors.py  candidate_generation.py  evaluator.py  http_client.py  local_runner.py  orientations.py  remote_runner.py  scoring.py  state_view.py  support_planes.py  types.py
backend/app/api/: __init__.py  app.py  routes.py  serializers.py
backend/app/core/: __init__.py  exceptions.py
backend/app/engine/: __init__.py  geometry.py  stability.py  truck_packing_engine.py
backend/app/models/: __init__.py  api.py  entities.py
backend/app/rl/: __init__.py  action_repair.py  parallel_manager.py  raw_env.py
backend/app/services/: __init__.py  episode_registry.py  episode_service.py  preview_service.py
backend/app/tests/: conftest.py  test_api.py  test_engine_behavior.py  test_extreme_point_agent.py  test_geometry.py  test_parallel.py
docs/: fidelity_audit.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/app/: App.tsx
frontend/src/components/: MiniBoxPreview.tsx
frontend/src/lib/: api.ts  quaternion.test.ts  quaternion.ts
frontend/src/store/: gameStore.ts
scripts/: benchmark_extreme_point_parallel.py  run_extreme_point_http.py  run_extreme_point_local.py
shared/api_examples/: local_start.json  place.json  start.json
(+3 files in other folders)
